--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,10 +19,8 @@ jobs:
     outputs:
       release_built: ${{ steps.set-output.outputs.release_built }}
     steps:
-      - name: Install clang
-        run: sudo apt install -y clang
-      - name: Install mold
-        run: sudo apt install -y mold
+      - name: Install clang & mold
+        run: sudo apt install -y clang mold
       - uses: actions/checkout@v4
       - name: Build binaries in "${{ matrix.BUILD_TARGET }}" mode
         run: cargo build --profile ${{ matrix.BUILD_TARGET }}
