--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.32", features = ["derive"] }
+cphf = "1.0.0"
 eframe = "0.31.1"
 phf = { version = "0.11.3", features = ["macros"] }
