--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,8 +19,8 @@ jobs:
     outputs:
       release_built: ${{ steps.set-output.outputs.release_built }}
     steps:
-      - name: Install clang & mold
-        run: sudo apt install -y clang mold
+      - name: Install linking & testing dependencies
+        run: sudo apt install -y clang mold imagemagick
       - uses: actions/checkout@v4
       - name: Build binaries in "${{ matrix.BUILD_TARGET }}" mode
         run: cargo build --profile ${{ matrix.BUILD_TARGET }}
@@ -31,5 +31,7 @@ jobs:
             ~/.cargo/git
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-      - name: Run integration tests
+      - name: Run blarggs tests
         run: ./tests/blarggs/run.sh
+      - name: Run mattcurrie tests
+        run: ./tests/mattcurrie/run.sh
