--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.32", features = ["derive"] }
 cphf = "1.0.0"
-eframe = "0.31.1"
+eframe = { version = "0.31.1", features = ["glow"] }
 phf = { version = "0.11.3", features = ["macros"] }
 signal-hook = "0.3.17"
