--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 clap = { version = "4.5.32", features = ["derive"] }
 cphf = "1.0.0"
 eframe = { version = "0.31.1", features = ["glow"] }
+egui_tiles = "0.12.0"
 phf = { version = "0.11.3", features = ["macros"] }
 signal-hook = "0.3.17"
