--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.32", features = ["derive"] }
 cphf = "1.0.0"
+crossbeam-channel = "0.5.14"
 eframe = { version = "0.31.1", features = ["glow"] }
 egui_tiles = "0.12.0"
 phf = { version = "0.11.3", features = ["macros"] }
